[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ouroboros"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
solana-program = "~1.14.16"
borsh = "0.9.3"
bytemuck = "1.13.0"
itertools = "0.10.5"
thiserror = "1.0.38"
bs58 = "0.4.0"
solana-security-txt = "1.1.0"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "1.8.4", features = ["full"] }
solana-sdk = "1.14.16"
solana-client = "1.14.16"
solana-program-test = "1.14"